8-k8s-ingress-loadbalancer-istio-gateway-multi-subdomains/kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-app
  labels:
    app: my-app
spec:
  type: ClusterIP
  selector:
    app: my-app
  ports:
    - name: http
      port: 80 # this Service port (to receive connections externally)
      targetPort: 80 # the Pod port (to send connections to)
