8-k8s-ingress-loadbalancer-istio-gateway-multi-subdomains/kubernetes/ingress.yml
# Will create Ingress in GKE Servicess > Ingress tab
# Will create static external/public IP in GKE if non specified in annotations
# Will create an external Application Load Balancer in GKE (give it a few mins)
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  # annotations:
    # kubernetes.io/ingress.global-static-ip-name: "ingress-test-ip"
    # networking.gke.io/managed-certificates: "my-cert"
    # networking.gke.io/v1beta1.FrontendConfig: "ingress-test-fe-config"
spec:
  defaultBackend:
    service:
      name: my-app
      port:
        number: 80
