8-k8s-ingress-loadbalancer-istio-gateway-multi-subdomains/kubernetes/test-virtual-service.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: test-app
  # namespace: production
spec:
  hosts:
    - test.testmosaic.com
    - test-app
  gateways:
    - gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: test-app
